# advent-of-code

./: .gitignore  README.rst  pyproject.toml
advent_of_code/: download_puzzle.py  puzzle.py  solve_puzzle.py
advent_of_code/scripts/: precommit.py  solve_puzzle.py
advent_of_code/year2020/day01/: part1.py  part2.py
advent_of_code/year2020/day02/: part1.py  part2.py
advent_of_code/year2020/day03/: part1.py  part2.py  shared.py
advent_of_code/year2020/day04/: part1.py  part2.py
advent_of_code/year2020/day05/: part1.py  part2.py  shared.py
advent_of_code/year2020/day06/: part1.py  part2.py
advent_of_code/year2020/day07/: part1.py  part2.py  shared.py
advent_of_code/year2020/day08/: part1.py  part2.py  shared.py
advent_of_code/year2020/day09/: part1.py  part2.py  shared.py
advent_of_code/year2020/day10/: part1.py  part2.py
advent_of_code/year2020/day11/: part1.py  part2.py  shared.py
advent_of_code/year2020/day12/: part1.py  part2.py  shared.py
advent_of_code/year2020/day13/: part1.py  part2.py
advent_of_code/year2020/day14/: part1.py  part2.py  shared.py
advent_of_code/year2020/day15/: part1.py  part2.py  shared.py
advent_of_code/year2020/day16/: part1.py  part2.py  shared.py
advent_of_code/year2020/day17/: part1.py  part2.py  shared.py
advent_of_code/year2020/day18/: part1.py  part2.py  shared.py
advent_of_code/year2020/day19/: part1.py  part2.py  shared.py
advent_of_code/year2021/day01/: part1.py  part2.py  shared.py
advent_of_code/year2021/day02/: part1.py  part2.py
advent_of_code/year2021/day03/: part1.py  part2 alternative.py  part2.py
advent_of_code/year2021/day04/: part1.py  part2.py  shared.py
advent_of_code/year2021/day05/: part1.py  part2.py  shared.py
advent_of_code/year2021/day06/: part1.py  part2.py  shared.py
advent_of_code/year2021/day07/: part1.py  part2.py
advent_of_code/year2021/day08/: part1.py  part2.py
advent_of_code/year2021/day09/: part1.py  part2.py  shared.py
advent_of_code/year2021/day10/: part1.py  part2.py  shared.py
advent_of_code/year2021/day11/: part1.py  part2.py  shared.py
advent_of_code/year2021/day12/: part1.py  part2.py  shared.py
advent_of_code/year2021/day13/: part1.py  part2.py  shared.py
advent_of_code/year2021/day14/: part1.py  part2.py  shared.py
advent_of_code/year2022/day01/: part1.py  part2.py  shared.py
advent_of_code/year2022/day02/: part1.py  part2.py
advent_of_code/year2022/day03/: part1.py  part2.py
advent_of_code/year2022/day04/: part1.py  part2.py  shared.py
(+98 files in other folders)
