[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code"
authors = ["Advait Hasabnis <advait.iitb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.0"
isort = "^5.10.1"
black = "^21.12b0"
mypy = "^0.991"

[tool.poetry.scripts]
puzzle = "advent_of_code.puzzle:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
skip-string-normalization = true
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
