[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code"
authors = ["Advait Hasabnis <advait.iitb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
markdownify = "^0.11.6"

[tool.poetry.scripts]
solve_puzzle = "advent_of_code.solve_puzzle:main"
download_puzzle = "advent_of_code.download_puzzle:main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^1.7.1"
isort = "^5.13.2"
pytest = "^7.4.3"
ipykernel = "^6.19.3"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
skip-string-normalization = true
target-version = ['py310']

[[tool.mypy.overrides]]
module = ["requests", "markdownify"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
