[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code"
authors = ["Advait Hasabnis <advait.iitb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.8"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
markdownify = "^0.14.1"

[tool.poetry.scripts]
solve_puzzle = "advent_of_code.scripts.solve_puzzle:main"
download_puzzle = "advent_of_code.scripts.download_puzzle:main"
precommit = "advent_of_code.scripts.precommit:run_linters"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.0"
isort = "^5.13.2"
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.black]
line-length = 99
skip-string-normalization = true
target-version = ['py310']

[[tool.mypy.overrides]]
module = ["requests", "markdownify"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
